# cmakesForSTM

./: .gitignore  CMakeLists.txt  CodeCoverage.cmake  README.md  functions.cmake
core/: CMakeLists.txt
syscalls/: CMakeLists.txt  syscalls.c
targets/arm/: CMakeLists.txt  README.md  settings.cmake
targets/x86/: CMakeLists.txt  settings.cmake
targets/x86/unitTests/: test_example.cpp
